[gd_scene load_steps=20 format=3 uid="uid://dbsryso5vgo6s"]

[ext_resource type="Script" uid="uid://i6lfw4evyoa8" path="res://Characters/Players/scripts/ZekoNode.gd" id="1_cprly"]
[ext_resource type="Texture2D" uid="uid://nmeinsw5i5xt" path="res://texture/Characters/Zeno's/Pequeno_Zeno.png" id="2_yjfde"]
[ext_resource type="Script" uid="uid://cjgvb1l723b2a" path="res://Characters/Players/scripts/menu/sprite.gd" id="4_6sfyn"]
[ext_resource type="Texture2D" uid="uid://ctutr7jovxxm6" path="res://texture/PNG/funds/tilemap_packed.png" id="5_kwisv"]
[ext_resource type="Texture2D" uid="uid://m506ayw5c1lv" path="res://texture/PNG/GUI.png" id="6_yjfde"]
[ext_resource type="FontFile" uid="uid://ckj2wo0x2kbuu" path="res://texture/font/kenney_mini_square.ttf" id="7_7yoew"]

[sub_resource type="Animation" id="Animation_ylfkn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_pqnul"]
resource_name = "chouch"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 9)]
}

[sub_resource type="Animation" id="Animation_6sfyn"]
resource_name = "dash"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_guts3"]
resource_name = "fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_7vnft"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_jsh4p"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_kwisv"]
resource_name = "skid"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_cprly"]
resource_name = "walk"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wuym2"]
_data = {
&"RESET": SubResource("Animation_ylfkn"),
&"chouch": SubResource("Animation_pqnul"),
&"dash": SubResource("Animation_6sfyn"),
&"fall": SubResource("Animation_guts3"),
&"idle": SubResource("Animation_7vnft"),
&"jump": SubResource("Animation_jsh4p"),
&"skid": SubResource("Animation_kwisv"),
&"walk": SubResource("Animation_cprly")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7qrlc"]
radius = 7.0
height = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7yoew"]
atlas = ExtResource("6_yjfde")
region = Rect2(135, 20, 52, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds22u"]
atlas = ExtResource("6_yjfde")
region = Rect2(5, 20, 52, 7)

[sub_resource type="LabelSettings" id="LabelSettings_ds22u"]
font = ExtResource("7_7yoew")

[node name="Zeko" type="CharacterBody2D" groups=["Player"]]
collision_layer = 41
collision_mask = 40
script = ExtResource("1_cprly")
metadata/_edit_vertical_guides_ = [-58.0]

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(4.8, 4.8)
process_callback = 0
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 0.15
drag_vertical_offset = 0.2
drag_left_margin = 0.15
drag_right_margin = 0.15
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wuym2")
}
speed_scale = 0.8

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_yjfde")
hframes = 6
vframes = 10
script = ExtResource("4_6sfyn")

[node name="RayCast" type="RayCast2D" parent="Sprite"]
unique_name_in_owner = true
visible = false
position = Vector2(-8, 0)
target_position = Vector2(40, 0)
collision_mask = 2

[node name="balloonZ" type="Sprite2D" parent="Sprite"]
unique_name_in_owner = true
visible = false
modulate = Color(0.454902, 0.662745, 0.960784, 0.254902)
z_index = 30
position = Vector2(0, -24)
texture = ExtResource("5_kwisv")
region_enabled = true
region_rect = Rect2(176, 32, 16, 16)

[node name="magnifyingZ" type="Sprite2D" parent="Sprite"]
unique_name_in_owner = true
visible = false
modulate = Color(0.454902, 0.662745, 0.960784, 0.254902)
z_index = 30
position = Vector2(0, -21)
texture = ExtResource("5_kwisv")
region_enabled = true
region_rect = Rect2(96, 0, 16, 16)

[node name="takeZ" type="Sprite2D" parent="Sprite"]
unique_name_in_owner = true
visible = false
modulate = Color(0.454902, 0.662745, 0.960784, 0.254902)
z_index = 30
position = Vector2(0, -21)
texture = ExtResource("5_kwisv")
region_enabled = true
region_rect = Rect2(240, 96, 16, 16)

[node name="questionZ" type="Sprite2D" parent="Sprite"]
unique_name_in_owner = true
visible = false
modulate = Color(0.454902, 0.662745, 0.960784, 0.254902)
z_index = 30
position = Vector2(0, -21)
texture = ExtResource("5_kwisv")
region_enabled = true
region_rect = Rect2(0, 144, 16, 16)

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_7qrlc")

[node name="CanvasL" type="CanvasLayer" parent="."]

[node name="barrel" type="TextureProgressBar" parent="CanvasL"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -1032.0
offset_bottom = -500.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
max_value = 200.0
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 6
stretch_margin_bottom = 2
texture_under = SubResource("AtlasTexture_7yoew")
texture_progress = SubResource("AtlasTexture_ds22u")

[node name="barrelBAR" type="Label" parent="CanvasL/barrel"]
layout_mode = 0
offset_right = 276.0
offset_bottom = 27.0
scale = Vector2(0.3, 0.3)
label_settings = SubResource("LabelSettings_ds22u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="CanvasL"]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="CanvasL/Timer" to="." method="_on_timer_timeout"]
